# YOLO-ICP

./: README.md
cpp/annotate_mask/: CMakeLists.txt  annotate_mask.cpp
cpp/yolo-icp/: CMakeLists.txt  config_example.txt  main.cpp
cpp/yolo-icp/goicp/: jly_3ddt.cpp  jly_goicp.cpp  matrix.cpp
cpp/yolo-icp/pcd/: obj_000001.pcd  obj_000009.pcd  obj_000012.pcd
lmo_models/models/pcd/: obj_000005.pcd  obj_000006.pcd  obj_000008.pcd  obj_000010.pcd  obj_000011.pcd
models/yolo_icp_correct_label2/: args.yaml  results.csv
models/yolo_icp_linemod/: args.yaml  results.csv
python/yolo/: create_segmentation_labels.py  data.yaml  split_files.py  train_model.py
